feat: image embedding for sementic search
